# recipie-sharing/app.js
@@ -7,6 +7,7 @@ const tagRoutes = require("./modules/tag/routes");
 const categoryRoutes = require("./modules/category/routes");
 const commentRoutes = require("./modules/comment/routes");
 const ratingRoutes = require("./modules/rating/routes");
+const notificationRoutes = require("./modules/notification/routes");
 const swaggerUi = require("swagger-ui-express");
 const swaggerDocument = require("./swagger.json");
 const error = require("./middleware/error");
@@ -26,6 +27,7 @@ app.use("/api/tags", verifyToken, tagRoutes);
 app.use("/api/categories", verifyToken, categoryRoutes);
 app.use("/api/comments", verifyToken, commentRoutes);
 app.use("/api/ratings", verifyToken, ratingRoutes);
+app.use("/api/notifications", verifyToken, notificationRoutes);
 app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 app.use(error);
 
